"Switch Object" ignores view-visibility settings #81079

Closed
opened 2020-09-23 09:51:50 +02:00 by Campbell Barton · 4 comments

With the current "Switch Object" operator, object visibility isn't properly respected.

  • Split the 3D view in two.
  • Duplicate and move the default cube so it's not overlapping the existing cube.
  • Enter local view for one of the views.
  • Enter edit-mode.
  • Hover the cursor over the area where the object would be and press D-key.
  • Notice edit-mode is entered for the invisible cube.

Revision 286909ded74390e3ad5d97560fa6ff34012acce8


This should use ED_transform_snap_object_context_create_view3d so the objects are filtered using viewport drawing options.

With the current "Switch Object" operator, object visibility isn't properly respected. - Split the 3D view in two. - Duplicate and move the default cube so it's not overlapping the existing cube. - Enter local view for one of the views. - Enter edit-mode. - Hover the cursor over the area where the object would be and press D-key. - Notice edit-mode is entered for the invisible cube. Revision `286909ded74390e3ad5d97560fa6ff34012acce8` ---- This should use `ED_transform_snap_object_context_create_view3d` so the objects are filtered using viewport drawing options.
Pablo Dobarro was assigned by Campbell Barton 2020-09-23 09:51:50 +02:00
Author
Owner

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by 1ad100d556

This issue was referenced by 1ad100d5568ca3ec265215337e06bffce21e5fa4
Author
Owner

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#81079
No description provided.